# xdev

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  README.md
.cursor/rules/: AIDEV_RULES.mdc  check.mdc  commit.mdc  load-project.mdc  task.mdc
.github/workflows/: release.yml
chart/: 1.md  2.md  dns 子命令.md  安装脚本重构.md  实现 macos 构建.md  重构子命令分发方式.md
docs/: AI_RELEASE_ANNOUNCEMENT_PROMPT.md  ANALYSIS.md  COMMANDS.md  DEVELOPMENT.md  MACOS_SUPPORT.md  RELEASE.md  RELEASE_ANNOUNCEMENT_RULES.md  RELEASE_ANNOUNCEMENT_SUMMARY.md  release-guide.md
locales/: en.yml  zh-Hans.yml
scripts/: build.sh  ci-build.sh  install.sh  release.sh  test-release.sh
src/: main.rs
src/commands/: config.rs  dns.rs  draft.rs  hosts.rs  install.rs  mod.rs  uninstall.rs  version.rs
src/commands/config/: file.rs  interactive.rs  mod.rs  model.rs
src/commands/hosts/: backup.rs  core.rs  helpers.rs  list.rs  main.rs  mod.rs  operations.rs  structure.rs  subscribe.rs  unsubscribe.rs  update.rs  validation.rs
src/core/: filesystem.rs  globals.rs  http.rs  i18n.rs  mod.rs  permission.rs  table.rs  validation.rs
