[package]
name = "xdev"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.8"
dialoguer = "0.11"
rust-i18n = "3"

[package.metadata.i18n]
fallback-language = "zh-Hans"
load-path = "locales"
