[package]
name = "xdev"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
inquire = "0.7"
rust-i18n = "3"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
nix = { version = "0.29", features = ["user"] }
thiserror = "2.0.12"

[package.metadata.i18n]
fallback-language = "zh-Hans"
load-path = "locales"

[profile.release]
lto = true          # 开启链接时优化
opt-level = "z"     # 为最小体积优化
strip = true        # 自动剥离符号信息
panic = "abort"     # panic 时直接终止程序
codegen-units = 1   # 减少codegen单元以获得更好的优化
